--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@portabletext/react": "^3.1.0",
+    "@sanity/vision": "^3.48.1",
     "next": "14.2.3",
     "next-sanity": "^9.0.15",
     "react": "^18",
